--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -166,9 +166,20 @@ jobs:
       continue-on-error: true
 
     # report test results
-    - name: Report Test Results
+    - name: Report Test Results (Windows)
       uses: dorny/test-reporter@v1.7.0
-      if: ${{steps.cmake-test.outcome}} == 'success' || ${{steps.cmake-test.outcome}} == 'failure'      
+      if: (${{steps.cmake-test.outcome}} == 'success' || ${{steps.cmake-test.outcome}} == 'failure') && matrix.os == 'windows-2022'
+      with:
+        name: ${{ matrix.os }}_test-results
+        path: ${{github.workspace}}\testlog.xml
+        reporter: java-junit
+        # fail job based on report results
+        fail-on-error: true
+    
+    # report test results
+    - name: Report Test Results (Non-Windows)
+      uses: dorny/test-reporter@v1.7.0      
+      if: (${{steps.cmake-test.outcome}} == 'success' || ${{steps.cmake-test.outcome}} == 'failure') && matrix.os != 'windows-2022'     
       with:
         name: ${{ matrix.os }}_test-results
         path: ${{github.workspace}}/testlog.xml
