--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -161,31 +161,21 @@ jobs:
         ODB_TEST_DATA_DIR: ${{github.workspace}}/OdbDesignTestData/TEST_DATA
       run: | 
         ctest --test-dir ./out/build/${{matrix.preset}}/OdbDesignTests --output-log ${{github.workspace}}/testlog.txt --output-junit ${{github.workspace}}/testlog.xml --output-on-failure
-        dir ${{github.workspace}}        
+        dir ${{github.workspace}}
+        cat ${{github.workspace}}/testlog.txt     
       # let the report step fail the job if it finds failed tests...
       continue-on-error: true
-
+           
     # report test results
-    - name: Report Test Results (Windows)
+    - name: Report Test Results
       uses: dorny/test-reporter@v1.7.0
-      if: (${{steps.cmake-test.outcome}} == 'success' || ${{steps.cmake-test.outcome}} == 'failure') && matrix.os == 'windows-2022'
-      with:
-        name: ${{ matrix.os }}_test-results
-        path: ${{github.workspace}}\testlog.xml
-        reporter: java-junit
-        # fail job based on report results
-        fail-on-error: true
-    
-    # report test results
-    - name: Report Test Results (Non-Windows)
-      uses: dorny/test-reporter@v1.7.0      
-      if: (${{steps.cmake-test.outcome}} == 'success' || ${{steps.cmake-test.outcome}} == 'failure') && matrix.os != 'windows-2022'     
+      if: steps.cmake-test.outcome == 'success' || steps.cmake-test.outcome == 'failure'
       with:
         name: ${{ matrix.os }}_test-results
         path: ${{github.workspace}}/testlog.xml
         reporter: java-junit
         # fail job based on report results
-        fail-on-error: true
+        fail-on-error: true     
 
     #
     #   Artifacts
