enable path-replace-backslashes = true for test-reporter action to handle backslashes in windows path

--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -181,6 +181,7 @@ jobs:
         name: ${{ matrix.os }}_test-results
         path: ${{github.workspace}}/testlog.xml
         reporter: java-junit
+        path-replace-backslashes: true
         # fail job based on report results
         fail-on-error: true     
 
