--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -159,19 +159,9 @@ jobs:
       id: cmake-test
       env:
         ODB_TEST_DATA_DIR: ${{github.workspace}}/OdbDesignTestData/TEST_DATA
-      run: | 
-        ctest --test-dir ./out/build/${{matrix.preset}}/OdbDesignTests --output-log ${{github.workspace}}/testlog.txt --output-junit ${{github.workspace}}/testlog.xml --output-on-failure
-        dir ${{github.workspace}}
-        cat ${{github.workspace}}/testlog.xml
-        dir  ${{github.workspace}}/testlog.xml
+      run: ctest --test-dir ./out/build/${{matrix.preset}}/OdbDesignTests --output-log ${{github.workspace}}/testlog.txt --output-junit ${{github.workspace}}/testlog.xml --output-on-failure      
       # let the report step fail the job if it finds failed tests...
       continue-on-error: true
-
-    - name: Debug testlogxml
-      run: |
-        dir ${{github.workspace}}
-        cat ${{github.workspace}}/testlog.xml
-        dir  ${{github.workspace}}/testlog.xml
            
     # report test results
     - name: Report Test Results
