only run scan and build workflows on pull requests and then release and docker publish workflows on pushes

--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -3,7 +3,8 @@ name: CMake Build Multi-Platform
 
 on:
   push:
-    branches: [ "development", "main", "release", "nam20485" ]
+    #branches: [ "development", "main", "release", "nam20485" ]
+    branches: [ "release" ]
   pull_request:
     branches: [ "development", "main", "release", "nam20485" ]  
 
