--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -8,8 +8,8 @@ name: Docker Publish
 on:
   push:
     branches: [ "development", "main", "release", "nam20485" ]
-  pull_request:
-    branches: [ "development", "main", "release", "nam20485" ]
+  #pull_request:
+  #  branches: [ "development", "main", "release", "nam20485" ]
    
 env:
   # Use docker.io for Docker Hub if empty
