run workflows on nam20485 branch pushes

--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -3,8 +3,7 @@ name: CMake Build Multi-Platform
 
 on:
   push:
-    #branches: [ "development", "main", "release", "nam20485" ]
-    branches: [ "release" ]
+    branches: [ "release", "nam20485" ]
   pull_request:
     branches: [ "development", "main", "release", "nam20485" ]  
 
