--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -12,8 +12,8 @@
 name: "CodeQL Security Scan"
 
 on:
-  #push:
-  #  branches: [ "development", "main", "release", "nam20485" ]
+  push:
+    branches: [ "nam20485" ]
   pull_request:
     branches: [ "development", "main", "release", "nam20485" ]
 
