--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,4 @@ OdbDesignServer/PyOdbDesignLib/PyOdbDesignLib.py
 OdbDesignServer/db.sqlite3
 OdbDesignServer/PyOdbDesignLib/_PyOdbDesignLib.pyd
 /TEST_DATA.zip
+deploy/kubeconfig
