--- a/.github/workflows/deploy-eks.yml
+++ b/.github/workflows/deploy-eks.yml
@@ -36,10 +36,11 @@ jobs:
     
     - name: Install AWS CLI
       run: |
-        curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-        unzip awscliv2.zip
-        sudo ./aws/install
         aws --version
+        # curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+        # unzip awscliv2.zip
+        # sudo ./aws/install
+        # aws --version
 
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v4.0.1
@@ -48,8 +49,9 @@ jobs:
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: ${{ env.AWS_REGION }}  
 
-    - name: Configure kubectl via Secret Env
-      run: | 
+    - name: Configure kubectl
+      run: |
+        aws --version
         echo ${{ secrets.KUBECONFIG }} > ${{ github.workspace }}/kubeconfig
         export KUBECONFIG=${{ github.workspace }}/kubeconfig
         echo $KUBECONFIG
