add environment url and use payload.ref_name for environment name

--- a/.github/workflows/deploy-eks.yml
+++ b/.github/workflows/deploy-eks.yml
@@ -18,7 +18,9 @@ jobs:
   deploy:
     name: Deploy
     runs-on: ubuntu-22.04
-    environment: production
+    environment: 
+      name: ${{ github.event.client_payload.ref_name }}
+      url: http://default-ingress-1165108808.us-west-2.elb.amazonaws.com/swagger
 
     steps:
 
