--- a/.github/workflows/dependency-review.yml
+++ b/.github/workflows/dependency-review.yml
@@ -15,8 +15,20 @@ permissions:
   contents: read  
 
 jobs:
+
+  dependency-submission:
+    runs-on: ubuntu-22.04
+    permissions: 
+      id-token: write
+      contents: write
+          
+    steps:
+      - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
+      - name: Component detection 
+        uses: advanced-security/component-detection-dependency-submission-action@v0.0.2       
+
   dependency-review:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     permissions: 
       contents: write
       pull-requests: write
@@ -24,6 +36,7 @@ jobs:
     steps:
       - name: 'Checkout Repository'
         uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
+
       - name: 'Dependency Review'
         uses: actions/dependency-review-action@4901385134134e04cec5fbe5ddfe3b2c5bd5d976 # v4.0.0
         with:
