run sbom workflow on development branch pushes

--- a/.github/workflows/sbom-generate-submit.yml
+++ b/.github/workflows/sbom-generate-submit.yml
@@ -2,7 +2,7 @@ name: SBOM Generate and Submit
 
 on:
   push:
-    branches: [ "release" ]
+    branches: [ "development", "release" ]
   workflow_dispatch:
 
 permissions:
