--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -148,7 +148,7 @@ jobs:
         repository: 'nam20485/OdbDesignTestData'
         path: 'OdbDesignTestData'
         ref: 'main'
-        token: ${{ secrets.ODBDESIGN_TESTDATA_ACCESS_TOKEN }}
+        #token: ${{ secrets.ODBDESIGN_TESTDATA_ACCESS_TOKEN }}
         
     - name : Export ODB_TEST_DATA_DIR    
       uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
