--- a/.github/workflows/sbom-generate-submit.yml
+++ b/.github/workflows/sbom-generate-submit.yml
@@ -10,6 +10,7 @@ permissions:
 
 jobs:
   build:
+    name: Generate-Submit-SBOM
     runs-on: ubuntu-22.04
     permissions: 
         id-token: write
