add id-token: write permission to dependency-review workflow for component-detection step

--- a/.github/workflows/dependency-review.yml
+++ b/.github/workflows/dependency-review.yml
@@ -18,7 +18,8 @@ jobs:
 
   dependency-review:
     runs-on: ubuntu-22.04
-    permissions: 
+    permissions:
+      id-token: write 
       contents: write
       pull-requests: write
     
