--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -78,7 +78,12 @@ jobs:
           tags: |
             type=ref,event=pr
             type=ref,event=branch,suffix=-${{github.run_number}}
-            type=ref,event=branch,suffix=-latest            
+            type=ref,event=branch,suffix=-latest
+          annotations: |
+            annotation-index.org.opencontainers.image.source=https://github.com/nam20485/OdbDesign
+            annotation-index.org.opencontainers.image.description=The OdbDesign Docker image runs the OdbDesignServer REST API server executable listening on port 8888.
+            annotation-index.org.opencontainers.image.licenses=MIT
+            annotation-index.org.opencontainers.image.authors=https://github.com/nam20485          
 
       # Build and push Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
@@ -94,18 +99,14 @@ jobs:
           cache-to: type=gha,mode=max
           #platforms: linux/amd64
           file: Dockerfile
+          annotations: ${{ steps.meta.outputs.annotations }}                      
           build-args: |
             OWNER=nam20485
             GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}
             VCPKG_BINARY_SOURCES=clear;nuget,GitHub,readwrite
             ODBDESIGN_SERVER_REQUEST_USERNAME=${{ secrets.ODBDESIGN_SERVER_REQUEST_USERNAME }}
             ODBDESIGN_SERVER_REQUEST_PASSWORD=${{ secrets.ODBDESIGN_SERVER_REQUEST_PASSWORD }}
-          outputs: |
-            annotation-index.org.opencontainers.image.source=https://github.com/nam20485/OdbDesign
-            annotation-index.org.opencontainers.image.description=The OdbDesign Docker image runs the OdbDesignServer REST API server executable listening on port 8888.
-            annotation-index.org.opencontainers.image.licenses=MIT
-            annotation-index.org.opencontainers.image.authors=https://github.com/nam20485
-
+          
       # Sign the resulting Docker image digest except on PRs.
       # This will only write to the public Rekor transparency log when the Docker
       # repository is public to avoid leaking data.  If you would like to publish
