--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -80,10 +80,10 @@ jobs:
             type=ref,event=branch,suffix=-${{github.run_number}}
             type=ref,event=branch,suffix=-latest
           annotations: |
-            annotation-index.org.opencontainers.image.source=https://github.com/nam20485/OdbDesign
-            annotation-index.org.opencontainers.image.description=The OdbDesign Docker image runs the OdbDesignServer REST API server executable listening on port 8888.
-            annotation-index.org.opencontainers.image.licenses=MIT
-            annotation-index.org.opencontainers.image.authors=https://github.com/nam20485          
+            org.opencontainers.image.source=https://github.com/nam20485/OdbDesign
+            org.opencontainers.image.description=The OdbDesign Docker image runs the OdbDesignServer REST API server executable listening on port 8888.
+            org.opencontainers.image.licenses=MIT
+            org.opencontainers.image.authors=https://github.com/nam20485          
 
       # Build and push Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
