change description annotation

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -83,7 +83,7 @@ jobs:
             type=ref,event=branch,suffix=-latest
           annotations: |
             org.opencontainers.image.source=https://github.com/nam20485/OdbDesign
-            org.opencontainers.image.description=The OdbDesign Docker image runs the OdbDesignServer REST API server executable listening on port 8888.
+            org.opencontainers.image.description=A free open source cross-platform C++ library for parsing ODB++ Design archives and accessing their data. Exposed via a REST API and packaged inside of a Docker image. The OdbDesign Docker image runs the OdbDesignServer REST API server executable listening on port 8888.
             org.opencontainers.image.licenses=MIT
             org.opencontainers.image.authors=https://github.com/nam20485          
 
