--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -103,7 +103,11 @@ jobs:
             org.opencontainers.image.revision=${{ github.sha }}
             org.opencontainers.image.created=${{ env.CURRENT_DATETIME }}
             org.opencontainers.image.title=OdbDesign Server
-
+          labels: |
+            org.opencontainers.image.version=${{ github.ref_name }}-${{github.run_number}}
+            org.opencontainers.image.revision=${{ github.sha }}
+            org.opencontainers.image.created=${{ env.CURRENT_DATETIME }}
+          
       # Build and push Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
       - name: Build and push Docker image
