--- a/deploy/kube/local-ingress.yaml
+++ b/deploy/kube/local-ingress.yaml
@@ -17,20 +17,17 @@ spec:
     - host: precision5820
       http:
         paths:
-          - pathType: Prefix
-            path: "/"
+          - path: "/"
+            pathType: Prefix
             backend:
               service:
                 name: odbdesign-server-service
                 port:
                   name: ods-svc-port
-    # - host: nginx.local
-    #   http:
-    #     paths:
-    #       - path: /
-    #         pathType: Prefix
-    #         backend:
-    #           service:
-    #             name: nginx
-    #             port:
-    #               number: 80
+          - path: /swagger
+            pathType: Prefix
+            backend:
+              service:
+                name: odbdesign-server-swaggerui-service
+                port:
+                  name: oss-svc-port
