fix syntax for JS dispatch payload

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -147,9 +147,9 @@ jobs:
         with:
           repository: ${{ github.repository }}
           event-type: trigger_deploy_release_event
-          client-payload: >
-            '{ 
-                "ref_name": "${{ github.ref_name }}",
-                "run_number": "${{ github.run_number }}", 
-                "dispatch_id": "${{ secrets.DISPATCH_ID }}"
+          client-payload: |
+            '{ \
+                "ref_name": "${{ github.ref_name }}", \
+                "run_number": "${{ github.run_number }}", \
+                "dispatch_id": "${{ secrets.DISPATCH_ID }}" \
              }'
