--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -82,7 +82,7 @@ jobs:
     
           - name: Create Release Variables
             run: |
-              export RELEASE_VERSION="${{vars.RELEASE_VERSION_PREFIX}}.${{ github.event.client_payload.run_number }}
+              export RELEASE_VERSION="${{vars.RELEASE_VERSION_PREFIX}}.${{ github.event.client_payload.run_number }}"
               echo "RELEASE_VERSION=$RELEASE_VERSION" >> $GITHUB_ENV                    
               export RELEASE_TAG="v${RELEASE_VERSION}"
               echo "RELEASE_TAG=$RELEASE_TAG" >> $GITHUB_ENV
