--- a/.github/workflows/docker-scout-scan.yml
+++ b/.github/workflows/docker-scout-scan.yml
@@ -66,16 +66,6 @@ jobs:
       - name: Setup Docker buildx
         uses: docker/setup-buildx-action@edfb0fe6204400c56fbfd3feba3fe9ad1adfa345
 
-      # # Login against GHCR Docker registry except on PR
-      # # https://github.com/docker/login-action
-      # - name: Log into GHCR registry ${{ env.REGISTRY }}
-      #   if: github.event_name != 'pull_request'
-      #   uses: docker/login-action@343f7c4344506bcbf9b4de18042ae17996df046d
-      #   with:
-      #     registry: ${{ env.REGISTRY }}
-      #     username: ${{ github.actor }}
-      #     password: ${{ secrets.GITHUB_TOKEN }}
-
       # Login against Docker Hub to allow running Docker Scout
       # https://github.com/docker/login-action
       - name: Log into Docker Hub registry        
@@ -114,8 +104,8 @@ jobs:
             GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}
             VCPKG_BINARY_SOURCES=clear;nuget,GitHub,readwrite
 
-      - name: List Local Images
-        run: docker image ls
+      # - name: List Local Images
+      #   run: docker image ls
 
     #   # Sign the resulting Docker image digest except on PRs.
     #   # This will only write to the public Rekor transparency log when the Docker
@@ -159,3 +149,4 @@ jobs:
           only-severities: critical,high
           write-comment: true
           github-token: ${{ secrets.GITHUB_TOKEN }} # to be able to write the comment
+ 
