--- a/deploy/kube/OdbDesignServer/deployment.yaml
+++ b/deploy/kube/OdbDesignServer/deployment.yaml
@@ -56,11 +56,11 @@ spec:
                   key: ODBDESIGN_SERVER_REQUEST_PASSWORD           
           resources:
             limits:
+              cpu: "2"
+              memory: 2Gi
+            requests:
               cpu: "1"
               memory: 1Gi
-            requests:
-              cpu: 500m
-              memory: 500Mi
           livenessProbe:
             httpGet:
               path: /healthz/live
