--- a/.gitignore
+++ b/.gitignore
@@ -47,4 +47,4 @@ OdbDesignServer/PyOdbDesignLib/_PyOdbDesignLib.pyd
 deploy/kubeconfig
 Dockerfile.commentedOut
 scripts/create-release-invoker.js
-compose-deisgns/
+/compose-designs
