--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -33,6 +33,12 @@ jobs:
 
       - name: Checkout
         uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
+
+      - name: Install Doxygen
+        run: sudo apt install -y doxygen
+
+      - name: Generate Doxygen docs
+        run: doxygen ./OdbDesignLib/doxygen.conf         
         
       - name: Setup Pages
         uses: actions/configure-pages@1f0c5cde4bc74cd7e1254d0cb4de8d49e9068c7d # v4.0.0
@@ -42,6 +48,9 @@ jobs:
         with:
           source: ./docs
           destination: ./_site
+
+      # - name: Copy Doxygen docs
+      #   run: cp -r ./OdbDesignLib/doxygen/html ./_site/api
           
       - name: Upload artifact
         uses: actions/upload-pages-artifact@56afc609e74202658d3ffba0e8f6dda462b719fa # v3.0.1
