--- a/deploy/kube/local-ingress.yaml
+++ b/deploy/kube/local-ingress.yaml
@@ -2,7 +2,10 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: odbdesign-server-ingress
+  annotations:
+    cert-manager.io/issuer: "letsencrypt-staging"
 spec:
+  ingressClassName: traefik
   rules:   
     - host: precision5820
       http:
@@ -21,3 +24,7 @@ spec:
                 name: odbdesign-server-swaggerui-service
                 port:
                   name: oss-svc-port
+  tls:
+  - hosts:
+    - precision5820 # your domain 
+    secretName: letsencrypt-staging-tls
