--- a/deploy/kube/local-ingress.yaml
+++ b/deploy/kube/local-ingress.yaml
@@ -2,8 +2,8 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: odbdesign-server-ingress
-  annotations:
-    cert-manager.io/issuer: "letsencrypt-staging"
+  # annotations:
+  #   cert-manager.io/issuer: "letsencrypt-staging"
 spec:
   ingressClassName: traefik
   rules:   
@@ -24,7 +24,7 @@ spec:
                 name: odbdesign-server-swaggerui-service
                 port:
                   name: oss-svc-port
-  tls:
-  - hosts:
-    - precision5820 # your domain 
-    secretName: letsencrypt-staging-tls
+  # tls:
+  # - hosts:
+  #   - precision5820 # your domain 
+  #   secretName: letsencrypt-staging-tls
