--- a/OdbDesignLib/CMakeLists.txt
+++ b/OdbDesignLib/CMakeLists.txt
@@ -56,8 +56,10 @@ target_include_directories(OdbDesign
                            $<INSTALL_INTERFACE:include>)
 
 # PCH
-file (GLOB_RECURSE ODBDESIGN_HEADER_FILES "*.h")
-target_precompile_headers(OdbDesign PRIVATE ${ODBDESIGN_HEADER_FILES})
+if (NOT DEFINED ENV{CI})
+    file (GLOB_RECURSE ODBDESIGN_HEADER_FILES "*.h")
+    target_precompile_headers(OdbDesign PRIVATE ${ODBDESIGN_HEADER_FILES})
+endif()
 
 # link to zlib (required for Crow HTTP compression)
 find_package(ZLIB REQUIRED)
