--- a/.github/workflows/dependency-review.yml
+++ b/.github/workflows/dependency-review.yml
@@ -9,7 +9,7 @@
 name: 'Dependency Review'
 on: 
   pull_request:
-    branches: [ "main", "release", "development", "nam20485" ]
+    branches: [ "main", "staging", "release", "development", "nam20485" ]
 
 permissions:
   contents: read  
