--- a/.github/workflows/docker-scout-scan.yml
+++ b/.github/workflows/docker-scout-scan.yml
@@ -9,7 +9,7 @@ on:
   push:
     branches: [ "nam20485" ]
   pull_request:
-    branches: [ "development", "main", "release", "nam20485" ]
+    branches: [ "development", "staging", "main", "release", "nam20485" ]
    
 env:
   # Use docker.io for Docker Hub if empty
