Add 'staging' branch to Docker publish workflow triggers

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -7,7 +7,7 @@ name: Docker Publish
 
 on:
   push:
-    branches: [ "development", "main", "release", "nam20485" ]
+    branches: [ "development", "staging", "main", "release", "nam20485" ]
   #pull_request:
   #  branches: [ "development", "main", "release", "nam20485" ]
    
